[tool.poetry]
name = "gh2md"
version = "2.3.0"
description = "Export Github repository issues to markdown files: https://github.com/mattduck/gh2md."
authors = ["Matthew Duck <matt@mattduck.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/mattduck/gh2md"
keywords = ["github", "issues", "markdown"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
six = "^1.16.0"
python-dateutil = ">=2.8,<3.0"
requests = ">=2.25,<3.0"
gql = {extras = ["requests"], version = "^3.4.1"}

[tool.poetry.group.dev.dependencies]
coverage = [
  {version = "<=7.2.7", python = "3.7"},
  {version = "^7", python = ">3.7"}
]
pytest = ">=3.0"
mock = "^5.1.0"
tox = [
  {version = "<=4.8.0", python = "<3.8"},
  {version = "^4", python = ">=3.8"}
]
flake8 = [
  {version = "<=5.0.4", python = "<=3.8"},
  {version = "^6", python = ">=3.8.1"}
]
black = [
  {version = "<=23.3.0", python = "3.7"},
  {version = "^23", python = ">=3.8"}
]


[tool.poetry.scripts]
gh2md = 'gh2md.gh2md:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
